--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_BACKEND_API="https://d589-2405-201-801b-5092-5d40-685f-2801-9418.ngrok-free.app"
-VITE_AUTH0_DOMAIN="dev000013.us.auth0.com"
-VITE_AUTH0_CIENT_ID="aWf9i7v7OFt4UfRIH2khjeIeG9i5KFYL"
+VITE_BACKEND_API="https://wastex-backend-exri.onrender.com"
+VITE_AUTH0_DOMAIN="devrony000013.us.auth0.com"
+VITE_AUTH0_CIENT_ID="ARthAYu3eqSJou2q4s0NeLdWRlFVv0zr"
