--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-spinners": "^0.13.8",
     "react-webcam": "^7.1.1",
     "styled-components": "^6.0.7",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
