--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_BACKEND_API="https://wastex-backend-exri.onrender.com" 
 VITE_AUTH0_DOMAIN="devrony000013.us.auth0.com" 
 VITE_AUTH0_CIENT_ID="ARthAYu3eqSJou2q4s0NeLdWRlFVv0zr"
+VITE_IPSTACK_API_KEY="c6901904f8fe49dba6602b7e17e9fce2"
