--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.15.0",
     "react-spinners": "^0.13.8",
+    "react-webcam": "^7.1.1",
+    "styled-components": "^6.0.7",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
